relaxed the SettingsChecker, implemented a compatibility relation between settings